cmake_minimum_required(VERSION 3.12)
project(cplusplus)

#set (CMAKE_C_STANDARD 99)
set (CMAKE_CXX_STANDARD 11)

add_executable(cplusplus main.cpp test.cpp pthrad.c cons关键字总结.cpp)
add_executable(one namespace_demo.cpp)
add_executable(Cplusplusext Cplusplusext.cpp)
add_executable(two Teacher.cpp Teacher.h)
add_executable(three FunctionOverloading.cpp FunctionOverloading.h)
add_executable(four Function.cpp)
add_executable(five 可变参数.cpp)
add_executable(six 对象大小.cpp)
add_executable(seven 容器.cpp )
add_executable(eight 继承.cpp )
add_executable(night 多态与虚函数.cpp)
add_executable(static 静态.cpp 静态.h)
add_executable(staticdemo static.cpp)
add_executable(seqlist Seqlist.cpp Seqlist.h)
add_executable(friendly 友元.cpp)
add_executable(duotai 多态/duotai.cpp)
add_executable(lingsan 零散的知识.cpp)
add_executable(template 模版函数/template.cpp)
add_executable(arraylist arraylist/ArrayList.cpp arraylist/ArrayList.h)
add_executable(castype castype.cpp)
add_executable(EXCEPTION 异常处理.cpp)
add_executable(static_demo static/static关键字总结.cpp static/otherfile.cpp)
add_executable(string 字符串/teststring.cpp)
add_executable(iterator 迭代器.cpp)
add_executable(huiyisha 数据类型回忆杀.cpp)
add_executable(myexp 异常/myexception.cpp)
add_executable(autoptr 智能指针/autoptr.cpp 智能指针/autoptr.h)
add_executable(Hex  编解码/Hex.cpp 编解码/Hex.h)

